# playbookos-mvp

./: .gitignore  README-EN.md  README.md  pyproject.toml
data/sql/: postgres_schema.sql  sqlite_schema.sql
docs/: agent-operator.md  architecture.md  data-model.md  managed-agent-demo.md  mvp-plan.md  prd.md  ui-redesign.md
docs/articles/: how-we-built-playbookos.md
docs/records/: building-playbookos-story.md  iteration-memory.md  progress.md
scripts/: openclaw_demo.sh
skills/playbookos-operator/: SKILL.md
skills/playbookos-operator/references/: object-model.md  workflows.md
skills/playbookos-operator/scripts/: pbos_api.py
src/playbookos/: __init__.py  agent_integration.py  mcp_probe.py  runtime_settings.py  skills_service.py
src/playbookos/api/: __init__.py  app.py  schemas.py  store.py
src/playbookos/authoring/: __init__.py  service.py
src/playbookos/ui/: __init__.py  (+2 more)
tests/: test_agent_integration_unittest.py  test_api_store_unittest.py  test_authoring_unittest.py  test_dashboard_unittest.py  test_domain_models.py  test_error_log_unittest.py  test_executor_reflection_unittest.py  test_ingestion_unittest.py  test_knowledge_store_unittest.py  test_knowledge_update_unittest.py  test_mcp_probe_unittest.py  test_object_store_unittest.py  test_openai_adapter_unittest.py  test_orchestrator_unittest.py  test_planner_unittest.py  test_preview_server_unittest.py  test_reflection_lifecycle_unittest.py  test_runtime_settings_unittest.py  test_skill_store_unittest.py  test_skill_versioning_unittest.py  test_sqlite_store_unittest.py  test_supervisor_unittest.py
(+22 files in other folders)
