[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "playbookos"
version = "0.1.0"
description = "PlaybookOS MVP scaffolding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
playbookos-api = "playbookos.api.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
